styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header,
footer,
.grid {
    max-width: 840px;
    margin: 0 auto;
}

main {
    grid-column: 2/3;
}

main img {
    width: 150px;
    height: auto;
    border: #000;
    padding: .2rem;
    box-shadow: 0 0 30px #333;
    float: right;
}

h1 {
    color: #000;
    border-bottom: 1px solid #333;
}

p {
    padding: 0;
}

nav {
    background-color: steelblue;
    padding: 1rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

nav a {
    display: block;
    color: #eee;
    padding: 1rem;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 700;
}

aside {
    width: 20rem;
    text-align: center;
    position: relative;
    grid-column: 1/2;
    grid-row: 1/2;
}

aside h2 {
    position: absolute;
    top: 30px;
    left: 135px;
    color: #fff;
}

aside img {
    width: 200px;
    height: auto;
}

footer {
    margin-top: 15px;
    border-top: 1px solid #000;
    text-align: center;
}

/* Class Selectors */
.box {
    margin: 1rem;
    border: 1px solid rgb(0 0 0 / 10%);
    padding: 1rem;
    background-color: #eee;
    color: #002855;
}

.grid {
    display: grid;
    gap: 1rem;
    align-items: center;
}

